Category CRUD nézetek keretbe foglalása

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -44,7 +44,7 @@
 	@import 'components/icons';
 	@import 'components/posts';
 	@import 'components/mini-post';
-	@import 'components/post';
+	@import 'components/resource';
 	@import 'components/section';
 	@import 'components/table';
 
