--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -101,7 +101,7 @@
 		padding-right: _size(element-height);
 		text-overflow: ellipsis;
 
-		option {
+		option:not(:checked) {
 			color: _palette(fg-bold);
 			background: _palette(bg);
 		}
