--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -59,7 +59,8 @@
 		width: 100%;
 
 		&:invalid {
-			box-shadow: none;
+			// box-shadow: none;
+            box-shadow: 0 0 5px 1px red;
 		}
 
 		&:focus {
@@ -216,3 +217,13 @@
 		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
+
+  input:out-of-range {
+    background-color: rgba(255, 0, 0, 0.25);
+    border: 2px solid red;
+  }
+
+//   form:invalid input[type="submit"] {
+//     opacity: 0.3;
+//     pointer-events: none;
+//   }
