--- a/resources/sass/components/_resource.scss
+++ b/resources/sass/components/_resource.scss
@@ -6,7 +6,7 @@
 
 /* Post */
 
-	.post, .category, .tag, .comment, .project {
+	.post, .category, .tag, .comment, .project, .auth {
 		@include padding(_size(section-spacing), _size(section-spacing));
 		background: _palette(bg);
 		border: solid 1px _palette(border);
